[package]
name = "hank-plugin-wordle"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
pre-release-commit-message = "Release {{crate_name}} version {{version}}"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
derive-masked = "0.1.0"
extism-pdk = "1.2.1"
hank-pdk = "0.1.40"
hank-types = { version = "0.1.50", features = ["builder"] }
regex = "1.10.6"
serde = "1.0.210"
serde_json = "1.0.128"
